messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-bluegreen
  labels:
    app: django-messaging
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: blue  # Initially points to blue deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-blue
  labels:
    app: django-messaging
    deployment: blue
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service-green
  labels:
    app: django-messaging
    deployment: green
spec:
  type: ClusterIP
  selector:
    app: django-messaging
    version: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
